<?xml version="1.0"?>
<package format="2">
  <name>xsens2liosam</name>
  <version>0.0.0</version>
  <description>The xsens2liosam package</description>

  <maintainer email="s21c1036hn@gmail.com">YAZAWA Kenichi</maintainer>

  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
